# TP-RAG-Retrieval-Augmented-Generation-

./: README.md  pyproject.toml  streamlit_app.py
data/: cours_ia.txt  faq_rag.txt
notebooks/: RAGV2.ipynb
src/: config.py  multimodal.py  rag.py  utils.py
